--- a/Rimtalk-Persona-Director/Languages/ChineseSimplified/Keyed/UI.xml
+++ b/Rimtalk-Persona-Director/Languages/ChineseSimplified/Keyed/UI.xml
@@ -4,12 +4,18 @@
   <RPD_Settings_Title>AI 人设导演 - 设置面板</RPD_Settings_Title>
   <RPD_Setting_DebugLog>开启调试日志 (Enable Debug Log)</RPD_Setting_DebugLog>
   <RPD_Setting_DebugLogDesc>在控制台打印发送给 AI 的完整数据。</RPD_Setting_DebugLogDesc>
-  
+  <RPD_Settings_ShowMainButton>在界面底部显示图标以快捷打开备注和设置</RPD_Settings_ShowMainButton>
+  <RPD_Settings_ShowMainButtonTip>左键单击：打开备注；\n右键单击：打开角色列表\nShift + 左键单击：打开 Mod 设置</RPD_Settings_ShowMainButtonTip>
+  <RPD_Settings_OpenLibrary>打开预设库</RPD_Settings_OpenLibrary>
+  <RPD_Tip_OpenLibrary>管理角色性格预设以及新角色的自动分配规则</RPD_Tip_OpenLibrary>
   <RPD_Setting_FilterLabel>选择发送给 AI 的数据内容 (左: 名称, 右: 详细描述):</RPD_Setting_FilterLabel>
+  <RPD_Settings_EnableEvolve>启用人设更新功能</RPD_Settings_EnableEvolve>
+  <RPD_Settings_EnableEvolveTip>在人设编辑窗口显示更新和设置时间按钮，详细用法见创意工坊页面或者贴吧</RPD_Settings_EnableEvolveTip>
   
   <!-- 分组标题 -->
   <RPD_Group_Bio>生物与背景</RPD_Group_Bio>
   <RPD_Group_Traits>特征与状态</RPD_Group_Traits>
+  <RPD_Group_ExternalData>拓展信息</RPD_Group_ExternalData>
 
   <!-- 过滤器选项 -->
   <RPD_Filter_Basic>基础</RPD_Filter_Basic>
@@ -23,7 +29,13 @@
   <RPD_Filter_Ideology>文化</RPD_Filter_Ideology>
   <RPD_Filter_Skills>技能</RPD_Filter_Skills>
   <RPD_Filter_Health>健康</RPD_Filter_Health>
+  <RPD_Filter_Equipment>装备</RPD_Filter_Equipment>
+  <RPD_Filter_Inventory>物品</RPD_Filter_Inventory>
   <RPD_Filter_RimPsyche>RimPsyche</RPD_Filter_RimPsyche>
+  <RPD_Filter_DataComparison>数据对比（用于更新功能）</RPD_Filter_DataComparison>
+  <RPD_Filter_Memories>记忆</RPD_Filter_Memories>
+  <RPD_Filter_CommonKnowledge>常识</RPD_Filter_CommonKnowledge>
+
   <!-- 提示信息 -->
   <RPD_Tip_GenesDesc>警告: 描述可能极长！</RPD_Tip_GenesDesc>
   <RPD_Tip_NotesDesc>在 RimTalk 个性编辑器中点击“编辑备注”按钮来填写。</RPD_Tip_NotesDesc>
@@ -35,13 +47,89 @@
   <RPD_Label_TokenEst>预估总 Prompt Token: ~{0} (含隐藏协议，不含角色数据)</RPD_Label_TokenEst>
 
   <!-- 导演备注窗口 -->
-  <RPD_Notes_WinTitle>备注 / 自定义背景</RPD_Notes_WinTitle>
-  <RPD_Notes_WinDesc>在此处添加游戏无法记录的经历或命令（全局文本，切换角色不重置）。</RPD_Notes_WinDesc>
+  <RPD_Notes_Title>备注 / 自定义背景</RPD_Notes_Title>
+  <RPD_Notes_Description>在此处添加游戏无法记录的经历或命令（全局文本，切换角色不重置）。</RPD_Notes_Description>
   <RPD_Button_Clear>清空</RPD_Button_Clear>
   <RPD_Label_CharCount>字符数: {0} | 预估 Token (本窗口): ~{1}</RPD_Label_CharCount>
+
+  <!-- ★ 窗口模式切换 ★ -->
+  <RPD_Mode_SwitchToAdvanced>切换到：列表模式</RPD_Mode_SwitchToAdvanced>
+  <RPD_Mode_SwitchToSimple>切换到：备注模式</RPD_Mode_SwitchToSimple>
 
   <!-- 主界面按钮 -->
   <RPD_Button_EditNotes>备注</RPD_Button_EditNotes>
   <RPD_Tip_CurrentNotes>备注</RPD_Tip_CurrentNotes>
   <RPD_Tip_NoNotes>点击编辑</RPD_Tip_NoNotes>
+  <RPD_MainButton_Label>备注</RPD_MainButton_Label>
+  <RPD_Button_Evolve>更新</RPD_Button_Evolve>
+  <RPD_Tip_Evolve>根据最近的记忆和时间的流逝，添加新的角色发展</RPD_Tip_Evolve>
+  
+  <RPD_Button_SetTime>设置时间</RPD_Button_SetTime>
+  <RPD_Button_TimeAgo>{0}天前</RPD_Button_TimeAgo> <!-- {0} is days number -->
+  <RPD_Tip_SetTime_Empty>点击记录当前时间/年龄作为更新的基准</RPD_Tip_SetTime_Empty>
+  <RPD_Tip_SetTime_Info>上次记录: {0} 天前.\n生物年龄: {1}年.\n点击重置计时.</RPD_Tip_SetTime_Info>
+  
+  <RPD_Msg_TimestampUpdated>时间戳已更新</RPD_Msg_TimestampUpdated>
+
+<!-- 批量导演面板 -->
+  <RPD_Batch_Title>列表模式</RPD_Batch_Title>
+  <RPD_Batch_SceneNotes>备注 (对所有角色生效):</RPD_Batch_SceneNotes>
+  <RPD_Batch_Filter_Label>筛选角色:</RPD_Batch_Filter_Label>
+  <RPD_Batch_SelectAll>全选</RPD_Batch_SelectAll>
+  <RPD_Batch_Refresh>刷新</RPD_Batch_Refresh>
+
+  <!-- 复选框筛选器 -->
+  <RPD_Filter_Colonists>殖民者</RPD_Filter_Colonists>
+  <RPD_Filter_Prisoners>囚犯</RPD_Filter_Prisoners>
+  <RPD_Filter_Slaves>奴隶</RPD_Filter_Slaves>
+  <RPD_Filter_Visitors>访客</RPD_Filter_Visitors>
+  <RPD_Filter_Enemies>敌人</RPD_Filter_Enemies>
+  <RPD_Filter_Animals>动物</RPD_Filter_Animals>
+  <RPD_Filter_Mechs>机械体</RPD_Filter_Mechs>
+  <RPD_Filter_Anomalies>异象</RPD_Filter_Anomalies>
+
+<!-- 列表 -->
+  <RPD_Batch_Header_Name>名称</RPD_Batch_Header_Name>
+  <RPD_Batch_Header_Tag>标签</RPD_Batch_Header_Tag>
+  <RPD_Batch_Header_Race>种族</RPD_Batch_Header_Race>
+  <RPD_Batch_Header_Faction>派系</RPD_Batch_Header_Faction>
+  <RPD_Faction_None>无派系</RPD_Faction_None>
+  <RPD_Batch_Header_Actions>操作</RPD_Batch_Header_Actions>
+  
+  <RPD_Batch_PawnTooltip>当前性格:\n{0}</RPD_Batch_PawnTooltip>
+  <RPD_Batch_PersonalityNotSet>(未设置)</RPD_Batch_PersonalityNotSet>
+
+<!-- 角色身份标签 (用于列表中的 Tag 列) -->
+  <RPD_Tag_Colonist>殖民者</RPD_Tag_Colonist>
+  <RPD_Tag_Prisoner>囚犯</RPD_Tag_Prisoner>
+  <RPD_Tag_Slave>奴隶</RPD_Tag_Slave>
+  <RPD_Tag_Visitor>访客</RPD_Tag_Visitor>
+  <RPD_Tag_Enemy>敌人</RPD_Tag_Enemy>
+  <RPD_Tag_Animal>动物</RPD_Tag_Animal>
+  <RPD_Tag_Mech>机械体</RPD_Tag_Mech>
+  <RPD_Tag_Anomaly>异象</RPD_Tag_Anomaly>
+  <RPD_Tag_Other>其他</RPD_Tag_Other>
+
+<!-- 按钮 -->
+  <RPD_Batch_Status_Generating>生成中...</RPD_Batch_Status_Generating>
+  <RPD_Batch_Button_QuickGen>生成</RPD_Batch_Button_QuickGen>
+  <RPD_Batch_Button_DeepEdit>编辑</RPD_Batch_Button_DeepEdit>
+  <RPD_Batch_Button_Talk>谈话</RPD_Batch_Button_Talk>
+  <RPD_Batch_Button_BatchGen>为选中的 {0} 个角色生成</RPD_Batch_Button_BatchGen>
+  <RPD_Batch_Button_ModeSingle>模式: 单独发送</RPD_Batch_Button_ModeSingle>
+  <RPD_Batch_Button_ModeBatch>模式: 合并发送</RPD_Batch_Button_ModeBatch>
+  <RPD_Batch_Button_ModeTooltip>单独发送：为每个角色独立请求AI。\n合并发送（实验性）：将所有角色数据一次性发送给AI，尝试生成关联性故事。</RPD_Batch_Button_ModeTooltip>
+  <RPD_Tip_PromptSwitch>选择使用的提示词</RPD_Tip_PromptSwitch>
+ 
+  <!-- 消息提示 (新增) -->
+  <RPD_Message_BatchGeneratedSuccess>已为 {0} 个角色批量生成人设。</RPD_Message_BatchGeneratedSuccess>
+  <RPD_Message_BatchGeneratedFail>批量生成人设失败: AI 返回了空结果或格式错误。</RPD_Message_BatchGeneratedFail>
+
+  <!-- 消息提示 -->
+  <RPD_Message_GeneratedSuccess>已为 {0} 生成新的人设。</RPD_Message_GeneratedSuccess>
+  <RPD_Message_GeneratedFail>为 {0} 生成人设失败: AI 返回了空结果。</RPD_Message_GeneratedFail>
+  <!-- Evolve Messages  -->
+  <RPD_Msg_NoPersona>没有需要更新的人设</RPD_Msg_NoPersona>
+  <RPD_Msg_UpdatedSuccess>成功更新人设</RPD_Msg_UpdatedSuccess>
+  <RPD_Msg_UpdateFailed>更新失败或没有检测到变化</RPD_Msg_UpdateFailed>
 </LanguageData>
